--- a/package.json
+++ b/package.json
@@ -42,6 +42,8 @@
   },
   "devDependencies": {
     "@rocketseat/eslint-config": "^2.2.2",
+    "@testing-library/jest-dom": "^6.4.2",
+    "@testing-library/react": "^15.0.2",
     "@types/node": "^20.11.22",
     "@types/react": "^18.2.56",
     "@types/react-dom": "^18.2.19",
@@ -49,6 +51,7 @@
     "autoprefixer": "^10.4.17",
     "eslint": "^8.57.0",
     "eslint-plugin-simple-import-sort": "^12.0.0",
+    "happy-dom": "^14.7.1",
     "postcss": "^8.4.35",
     "prettier-plugin-tailwindcss": "^0.5.11",
     "tailwindcss": "^3.4.1",
